# KG-Query-Engine

./: .gitignore  CMakeLists.txt  README.md
include/kg_query_engine/: graph.hpp
src/: graph.cpp  main.cpp
